syntax = "proto2";

package Codec_CommonTypes;

message OneUnsigned
{
	optional uint64 value = 1;
}

message ManyUnsigned
{
	repeated uint64 value = 1 [packed=true];
}

message BinaryData
{
	optional bytes data = 1;
}

message ManyBinaryData
{
	repeated BinaryData value = 1;
}

message Strings
{
	repeated string data = 1;
}

message TxWithMetaData
{
	required uint32 height = 1;
	required uint32 txindex = 2;
	
	optional bytes rawTx = 10;

	optional bool isRBF = 20;
	optional bool isChainedZC = 21;
}

message ManyTxWithMetaData
{
	repeated TxWithMetaData tx = 1;
}